--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <footer class="footer p-4 mt-5">
         <div class="container d-flex flex-column flex-lg-row justify-content-between align-items-center text-center text-lg-start">
             <div class="mb-4 mb-lg-0">
-            <img src="../img/logo.png" alt="THE GRID" class="footer-logo">
+            <img src="./img/logo.png" alt="THE GRID" class="footer-logo">
             </div>
             <div class="redes-sociales text-center">
                 <h6 class="fw-bold mb-3">Nuestras Redes</h6>
@@ -127,4 +127,5 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
+
 </html>
